# oprim

./: .gitignore  ADR-061.md  CHANGELOG.md  LICENSE  Oprim-Final-List.md  README.md  SELF_CHECK_BATCH.md  SELF_CHECK_P6_B2.md  current_exports.txt  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: COVERAGE_GAP_oprim.md  cognitive.md  distance.md  statistics.md  time_series.md
docs/examples/: equity_curve_segment_label.md  time_series_split.md
docs/signoffs/: SELF_CHECK_P7_B2.md  SELF_CHECK_P9_B2.md  SELF_CHECK_P9_B3.md
oprim/: CHANGELOG.md  __init__.py  _aii_graph_types.py  _avatar_generate.py  _base.py  _build_system_prompt.py  _caddy.py  _channel_list_videos.py  _cognitive.py  _docker.py  _epub_toc_split.py  _exceptions.py  _face_animation.py  _file_parser_epub.py  _filesystem.py  _http_download_file.py  _llm_distill_strategy.py  _llm_extract_ku.py  _llm_summarize.py  _ltx2_cloud_generate.py  _manifest.py  _media_extract.py  _media_types.py  _network.py  _postgres.py  _protocols.py  _quant_analysis.py  _rabbitmq.py  _system.py  _validation.py  _vector_encode.py  _version.py  _vibevoice_synthesize.py  _video_concat.py  _video_generate.py  apply_screen_filter.py  avatar_generate.py  beneish_m_score.py  cache_invalidate.py  calendar.py  (+49 more)
oprim/_providers/: duix.py
oprim/changefeed/: __init__.py  compactor.py  errors.py  reader.py  schema.py  snapshot.py  writer.py
oprim/classifier/: __init__.py  detect_image_exif.py
oprim/crypto/: __init__.py  ed25519.py  merkle.py
oprim/derivatives/: __init__.py  _base.py  american.py  black_scholes.py  rates.py
oprim/embedding/: __init__.py  bge_m3.py  embed_text.py  qwen3_dashscope.py  qwen3_local.py
oprim/first_last_frame_transition/: __init__.py
oprim/llm/: __init__.py  llm_call.py
oprim/markets/: __init__.py  limits.py  rules.py
oprim/mcp/: __init__.py  mcp_server.py
oprim/mean_reversion/: __init__.py  ornstein_uhlenbeck.py
oprim/meta_db/: __init__.py  substrate_ops.py
oprim/parser/: __init__.py  parse_epub.py  parse_pdf.py
oprim/performance/: __init__.py
oprim/push/: __init__.py  dispatcher.py  errors.py  protocol.py
oprim/push/channels/: web.py  (+2 more)
oprim/risk/: __init__.py  cvar.py
oprim/serialization/: canonical.py
oprim/storage/: __init__.py  _oauth.py  errors.py  protocol.py
oprim/technical/: __init__.py  bands.py  oscillators.py  signals.py
oprim/timeseries/: __init__.py  cointegration.py  stationarity.py
oprim/translate/: __init__.py  _prompts.py  checkpoint.py  chunker.py  errors.py  format_epub.py  format_md.py  format_srt.py  protocol.py  router.py  terminology.py
oprim/vector_db/: lancedb.py
oprim/video_edit_element_remove/: __init__.py
oprim/volatility/: __init__.py  egarch.py  garch.py  gjr_garch.py  realized.py
tests/: _aegis_batch_1_self_test_report.md  conftest.py  test_aegis_b2_appstore.py  test_aegis_b2_caddy.py  test_aegis_b2_docker.py  test_aegis_b2_filesystem.py  test_aegis_b2_network.py  test_aegis_b2_postgres.py  test_aegis_b2_rabbitmq.py  test_aegis_b2_system.py  test_aegis_b2_webhook.py  test_aegis_b3_threshold.py  test_aegis_b4_throttle.py  test_aegis_b5_dedup.py  test_aii_p1_p2.py  test_aii_p3.py  test_alipay_create_qr_order.py  test_alipay_query_order.py  test_alipay_refund_order.py  test_alipay_verify_notify_signature.py  test_audio_mix.py  test_audio_normalize.py  test_audio_video_merge.py  test_avatar_generate.py  test_avatar_generate_duix.py  test_b8_oprims.py  test_backlink_resolver.py  test_backtest_stat.py  test_batch_a.py  test_batch_b.py  test_batch_c.py  test_batch_helivex_b.py  test_batch_hevi_f11.py  test_batch_hevi_f11_b4.py  test_batch_ma.py  test_batch_mb.py  test_batch_mc.py  test_bkt_irt.py  test_bkt_single_source.py  test_bm25_search.py  (+116 more)
tests/_providers/: __init__.py  test_longcat_avatar.py
tests/behavioral/: test_cpt.py  test_llad.py  test_salience.py  test_weighting.py
tests/changefeed/: conftest.py  test_compactor.py  test_reader.py  test_schema.py  test_snapshot.py  test_writer.py
tests/classifier/: test_detect_image_exif.py  test_detect_mime.py  test_detect_pdf_features.py  test_extract_text_sample.py
tests/contracts/: test_sha256_contract.py
tests/crypto/: test_ed25519.py  test_hmac_sha256.py  test_merkle.py  test_sha256_hash.py
tests/derivatives/: test_american.py  test_binomial_tree.py  test_black_scholes.py  test_coverage_supplement.py  test_exotic.py  test_monte_carlo.py  test_rates.py  test_sabr.py
tests/distance/: test_distributional_distance.py
tests/embedding/: test_embed_text.py
tests/finance/: test_futures_term_structure.py  test_nelson_siegel_fit.py
tests/fulltext/: test_tantivy.py
tests/info_geometry/: test_fisher_rao.py
tests/information/: test_information.py
tests/llm/: test_llm_call.py
tests/markets/: test_limits.py  test_rules.py  test_sector_strength_proxy.py
tests/mcp/: test_mcp_server.py
tests/mean_reversion/: test_ornstein_uhlenbeck.py
tests/meta_db/: test_duckdb.py  test_substrate_pin.py
tests/parser/: test_parse_epub.py  test_parse_html.py  test_parse_pdf.py
tests/performance/: test_cagr.py  test_cumulative_returns.py
tests/point_process/: test_hawkes_nll.py
tests/push/: test_dispatcher.py  test_email.py  test_protocol.py  test_web.py
tests/recursive_utility/: test_epstein_zin.py
tests/risk/: test_cvar.py  test_dispersion.py
tests/serialization/: test_canonical_json.py  test_canonical_numpy.py
tests/signal_processing/: test_signal_processing.py
tests/signature/: test_path_signature.py
tests/similarity/: test_vector_similarity.py
tests/spectral/: test_eigengap.py  test_ledoit_wolf.py  test_marchenko_pastur.py  test_rie.py
tests/stats/: test_within_group_percentile.py
tests/storage/: test_gdrive.py  test_gdrive_integration.py  test_local.py  test_protocol.py
tests/technical/: test_adaptive.py  test_bands_extra.py  test_bollinger_bands.py  test_chandelier_exit.py  test_donchian_channel.py  test_ema.py  test_macd.py  test_oscillators_extra.py  test_rsi_normalized.py  test_signals.py  test_sma.py  test_trend.py  test_volume.py  test_vwap.py
(+63 files in other folders)
